--- a/web/package.json
+++ b/web/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "logsearch",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "babel-core": "^6.26.3",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "material-design-icons": "^3.0.1",
-    "moment": "^2.21.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-md": "^1.2.11",
-    "web-audio-analyser": "^2.0.1",
-    "whatwg-fetch": "^2.0.3"
-  },
-  "scripts": {
-    "start": "webpack-dev-server --mode development --content-base public",
-    "build": "node_modules/.bin/webpack -p --config webpack.config.prod.js --mode production && tar -zcvf build.tar.gz -C build . -C ../public ."
-  },
-  "devDependencies": {
-    "babel-loader": "^7.1.3",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.10",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^3.0.7",
-    "webpack-dev-server": "^3.1.0"
-  }
+    "name": "rightversionv5",
+    "dependencies": {
+        "material-design-icons": "^3.0.1",
+        "moment": "^2.21.0",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
+        "react-md": "^1.2.11",
+        "web-audio-analyser": "^2.0.1",
+        "whatwg-fetch": "^2.0.3"
+    },
+    "scripts": {
+        "start": "webpack-dev-server --mode development --content-base public",
+        "build": "node_modules/.bin/webpack -p --mode production && cp public/* dist/",
+        "deploy": "cd dist && git add --all && git commit -m 'Deploying changes' && git push origin gh-pages && cd .."
+    },
+    "devDependencies": {
+        "@babel/core": "^7.1.5",
+        "@babel/plugin-proposal-class-properties": "^7.1.0",
+        "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+        "@babel/preset-env": "^7.1.5",
+        "@babel/preset-react": "^7.0.0",
+        "babel-loader": "^8.0.4",
+        "css-loader": "^1.0.1",
+        "mini-css-extract-plugin": "^0.4.4",
+        "node-sass": "^4.10.0",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.1",
+        "webpack": "^4.25.1",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.10"
+    }
 }
